--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 node (label: 'slave'){
     stage('1 - create 10 files with text') {
         for (int i = 1; i < 11; i++) {
-            writeFile file: "File${i}.txt", text: "Random sample text."
+            writeFile file: "file${i}.txt", text: "Random sample text."
         }
     }
     
@@ -9,23 +9,19 @@ node (label: 'slave'){
         d = new Date()
         String stage2 = "\nTime: ${d.format("HH:mm:ss")} \nDate: ${d.format("dd/MM/yyy")}  \nTimeZone: ${d.format("zzz")}"
         for (int i = 1; i < 11; i++) {
-            sh "echo '${stage2}' >> File${i}.txt"
+            sh "echo '${stage2}' >> file${i}.txt"
         }
     }
-    
-    //drrrrr
+
     stage('3 - make those files read-only') {
         sh 'for f in *.txt;do chmod 444 ${f}; done'
     } 
 
     stage('4 - Build new image based on nginx image') {
-        sh """
-            docker build -t yoni_site .
-            docker run -- rm yoni_site
-        """
+        sh 'docker build -t yoni_site .'
     }  
 
     stage('5 - Run container with mounted directory with files from Stage 3') {
-        sh 'npm install'
+        sh 'docker run -- rm yoni_site'
     } 
 }
