--- a/static-site/nginx.conf
+++ b/static-site/nginx.conf
@@ -39,10 +39,15 @@ http {
 
         #access_log  logs/host.access.log  main;
 
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
+        ##location / {
+        ##    root   html;
+        ##    index  index.html index.htm;
+        ##}
+
+        location /{ 
+            root /text-file/;  
+            autoindex on;
+        }   
 
         #error_page  404              /404.html;
 
