--- a/static-site/nginx.conf
+++ b/static-site/nginx.conf
@@ -43,12 +43,10 @@ http {
         ##    root   html;
         ##    index  index.html index.htm;
         ##}
-
-        location /{ 
-            root /text-file/;  
+        location root /text-file/ {
             autoindex on;
-        }   
-
+        }
+  
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
