--- a/static-site/nginx.conf
+++ b/static-site/nginx.conf
@@ -34,19 +34,16 @@ http {
     server {
         listen       80;
         server_name  localhost;
-
+        root /var/www/html;
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
-        ##location / {
-        ##    root   html;
-        ##    index  index.html index.htm;
-        ##}
-        location root /text-file/ {
-            autoindex on;
+        location / {
+               autoindex on;
         }
-  
+        
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
