--- a/static-site/nginx.conf
+++ b/static-site/nginx.conf
@@ -12,7 +12,8 @@ http {
     server {
         listen       80;
         server_name  localhost;
-        root /home/ec2-user/html;
+    
+        root /var/www/html;
         location / {
                autoindex on;
         }
