--- a/static-site/nginx.conf
+++ b/static-site/nginx.conf
@@ -13,7 +13,7 @@ http {
         listen       80;
         server_name  localhost;
     
-        root /home/ec2-user/html;
+        root /var/www/html;
         location / {
                autoindex on;
         }
